# talons-blue

./: .gitignore  Code  LICENSE  README.md  cli.py  code  example.py  pyproject.toml  requirements.txt  talons_blue.py  test_talons_blue.py
talons_blue/: __init__.py  cli.py  scanner.py  utils.py
